--- a/sampleconfig.ini
+++ b/sampleconfig.ini
@@ -3,6 +3,13 @@ nzb_import_directory = /mnt/nzbs/Import
 nzbs_root_directory = /mnt/nzbs
 usenet_rclone_mount_directory = /mnt/remote/usenet
 
+[Logging]
+debug = false
+
+[SABnzbd]
+url = http://sabnzbd:8080
+api_key = sabnzbd_api_key
+
 [radarr]
 api_key = radarr_api_key
 url = http://radarr:7878
