--- a/sampleconfig.ini
+++ b/sampleconfig.ini
@@ -1,4 +1,5 @@
 [DEFAULT]
+# You will need to create an Import folder inside your nzbs folder
 nzb_import_directory = /mnt/nzbs/Import
 nzbs_root_directory = /mnt/nzbs
 usenet_rclone_mount_directory = /mnt/remote/usenet
@@ -10,17 +11,18 @@ debug = false
 url = http://sabnzbd:8080
 api_key = sabnzbd_api_key
 
-[radarr]
+# You can add as many arrs as you want 
+[radarr] # this needs to match the sabnzbd category for this instance
 api_key = radarr_api_key
 url = http://radarr:7878
 
-[sonarr]
+[sonarr] # this needs to match the sabnzbd category for this instance
 api_key = sonarr_api_key
 url = http://sonarr:8989
 
-[lidarr]
+[lidarr] # this needs to match the sabnzbd category for this instance
 api_key = lidarr_api_key
 url = http://lidarr:8686
 
-[Rclone]
+[Rclone] 
 vfs_url = http://localhost:5572
