--- a/sampleconfig.ini
+++ b/sampleconfig.ini
@@ -7,9 +7,9 @@ usenet_rclone_mount_directory = /mnt/remote/usenet
 [Logging]
 debug = false
 
-[SABnzbd]
-url = http://sabnzbd:8080
-api_key = sabnzbd_api_key
+#[SABnzbd]
+#url = http://sabnzbd:8080
+#api_key = sabnzbd_api_key
 
 # You can add as many arrs as you want 
 [radarr] # this needs to match the sabnzbd category for this instance
