--- a/sampleconfig.ini
+++ b/sampleconfig.ini
@@ -1,8 +1,8 @@
 [DEFAULT]
 # You will need to create an Import folder inside your nzbs folder
-nzb_import_directory = /mnt/nzbs/Import
-nzbs_root_directory = /mnt/nzbs
-usenet_rclone_mount_directory = /mnt/remote/usenet
+nzb_import_directory = /mnt/media/nzbs/Import
+nzbs_root_directory = /mnt/media/nzbs
+usenet_rclone_mount_directory = /mnt/media/remote/usenet
 
 [Logging]
 debug = false
